--- a/app/src/main/res/layout/item_city_weather.xml
+++ b/app/src/main/res/layout/item_city_weather.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/item_padding">
+        android:padding="@dimen/medium_padding">
 
         <TextView
             android:id="@+id/cityName"
@@ -24,6 +24,7 @@
             tools:text="Almaty"/>
 
         <TextView
+            android:id="@+id/temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
